[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/pickupScripts/health.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/pickups/health.png" type="Texture" id=2]
[ext_resource path="res://assets/sounds/sfx/pickupsSfx/collectHealth.wav" type="AudioStream" id=3]
[ext_resource path="res://scripts/sfxScripts/collectPickupSfx.gd" type="Script" id=4]
[ext_resource path="res://assets/sprites/lighting & glow/lightFade.png" type="Texture" id=5]

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "glowPulsate"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 0.11, 0.11 ), Vector2( 0.1, 0.1 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.128079, 0.128079 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "imagePulsating"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.128079, 0.128079 ), Vector2( 0.138, 0.14 ), Vector2( 0.128079, 0.128079 ) ]
}

[sub_resource type="CircleShape2D" id=1]
radius = 20.0

[node name="health" type="Area2D"]
collision_layer = 32
collision_mask = 0
script = ExtResource( 1 )

[node name="glowSprite" type="Sprite" parent="."]
modulate = Color( 0, 5.82, 0, 0.03 )
position = Vector2( -2.38419e-07, -9.53674e-07 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )
offset = Vector2( 3.8147e-06, 7.62939e-06 )

[node name="animationPlayer" type="AnimationPlayer" parent="glowSprite"]
autoplay = "glowPulsate"
anims/RESET = SubResource( 4 )
anims/glowPulsate = SubResource( 5 )

[node name="sprite" type="Sprite" parent="."]
scale = Vector2( 0.128079, 0.128079 )
texture = ExtResource( 2 )

[node name="animationPlayer" type="AnimationPlayer" parent="sprite"]
autoplay = "imagePulsating"
anims/RESET = SubResource( 2 )
anims/imagePulsating = SubResource( 3 )

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="collectHealthSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "sfx"
script = ExtResource( 4 )

[node name="selfDestroyTimer" type="Timer" parent="collectHealthSfx"]

[connection signal="body_entered" from="." to="." method="_on_health_body_entered"]
[connection signal="timeout" from="collectHealthSfx/selfDestroyTimer" to="collectHealthSfx" method="_on_selfDestroyTimer_timeout"]
